--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en-US" dir="ltr">
+<html>
 <head>
+<script type="text/javascript" src="abacus.js"></script>
+<link rel="stylesheet" type="text/css" href="abacus.css" />
 </head>
-<body>
+<body onload="draw();">
+<canvas id="abacus"></canvas>
 </body>
 </html>
